--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/syonfoppen/watch-store#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4"
+    "http-status-codes": "^2.1.4",
+    "nodemon": "^2.0.12"
   }
 }
