--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,9 @@
   "homepage": "https://github.com/syonfoppen/watch-store#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4",
+    "http-status-codes": "^2.1.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.12"
   }
 }
