--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/syonfoppen/watch-store#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "nodejs": "0.0.0",
     "uuid": "^8.3.2"
   },
