--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --single"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -18,6 +18,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "jwt-decode": "^3.1.2",
+    "page": "^1.11.6",
+    "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5",
+    "svelte-use-form": "^2.4.3"
   }
 }
